# screenwriter-backend

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
db/: database.py  dialogues_db.py  games_db.py  logging.py  scenes_db.py  users_db.py
db/db_CRUD/: characters_db.py  games_db.py  scenes_db.py
lib/auth/: auth.py  utils.py  validator.py
lib/llm/: generator.py  settings.py
lib/models/: schemas.py
progress/: 09_july.md  10_july.md  11_july.md
resources/: loaders.py  prompt.txt  prompt_content_validation.txt  prompt_edges_content.txt  prompt_edges_content_regeneration.txt  prompt_nodes_content.txt  prompt_nodes_content_regeneration.txt  prompt_structure.txt  prompt_structure_regeneration.txt  prompt_structure_validation.txt
src/: app.py  main.py
src/auth/api/: auth_endpoint.py
src/db/api/: db_endpoint.py
src/llm/: generator.py  settings.py
src/llm/api/: dialogue.py  dialogue_endpoint.py
src/models/: schemas.py
