[project]
name = "app"
version = "0.1.0"
description = ""

authors = [
    {name = "hilyyx"}
]
#readme = "README.md"
package-mode = "false"
requires-python = ">=3.9"
dependencies = [
]
[tool.poetry.dependencies]
annotated-types = "0.7.0"
anyio = "4.9.0"
click = "8.1.8"
colorama = "0.4.6"
exceptiongroup = "1.3.0"
fastapi = "0.115.14"
greenlet = "3.2.3"
h11 = "0.16.0"
idna = "3.10"
pydantic = "2.11.7"
pydantic_core = "2.33.2"
sniffio = "1.3.1"
SQLAlchemy = "2.0.41"
starlette = "0.46.2"
typing-inspection = "0.4.1"
typing_extensions = "4.14.1"
uvicorn = "0.35.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
